# gimslib-rs

./: Cargo.toml  README.md
examples/: 01_ui.rs
examples/02_triangle/: main.rs  shader.hlsl
examples/03_ellipse/: main.rs  shader.hlsl
examples/04_root_constant/: main.rs
examples/05_root_constant_buffer/: main.rs
examples/06_vertex_index_buffer/: main.rs  shader.hlsl
src/: event.rs  frame_data.rs  gimslib.rs  gpulib.rs  lib.rs  main.rs  swapchain.rs  vector_constant_buffer.rs
src/running_state/: constant_buffer.rs  egui.hlsl  egui_renderer.rs  mod.rs  swapchain.rs  texture_manager.rs
