[package]
name = "gimslib-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = "1.23.1"
egui = "0.31.1"
egui-winit = "0.31.1"
hassle-rs = "0.12.0"
windows = { version = "0.61.1", features = [
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D12",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Security",
    "Win32_System_Threading",
] }
winit = "0.30.11"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1
